# archehr

./: .gitignore  config_ds.json  pyproject.toml  requirements.txt  test.txt
notebooks/: cross_encoder_basics.ipynb  test.ipynb  test_cross_encode.ipynb
src/archehr/: __init__.py  eval.py
src/archehr/configs/finetune/: base_config.yaml  config_k.yaml  config_small_r.yaml
src/archehr/cross_encode/: eval.py  nli_deberta.py  submit.py  train.py  train_fsdp.py
src/archehr/cross_encode/finetune/: lora.py
src/archehr/cross_encode/train/: train_fsdp.py
src/archehr/data/: dataset.py  utils.py
src/archehr/eval/: basic_models.py  eval.py  mlp.py
src/archehr/models/qwen2/: Qwen2.py
src/archehr/sentence_embedders/: eval.py
src/archehr/utils/: cluster.py  loaders.py
src/scripts/submit/: submit_fsdp.sh
