[project]
name = "archehr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.3.6",
    "pandas>=2.2.3",
    "protobuf>=6.30.2",
    "sentence-transformers>=4.0.1",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.19.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "torchao>=0.10.0",
    "torchtune>=0.6.1",
    "transformers>=4.50.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/archehr"]
